--- a/app/src/main/res/layout/fragment_acception.xml
+++ b/app/src/main/res/layout/fragment_acception.xml
@@ -8,8 +8,8 @@
 
     <ImageButton
         android:id="@+id/acceptBG"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:background="@drawable/sibas_color_0"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
