--- a/app/src/main/res/layout/fragment_second_dram.xml
+++ b/app/src/main/res/layout/fragment_second_dram.xml
@@ -7,6 +7,18 @@
     tools:context=".Puzzles.SecondDram">
 
     <com.example.far_faraway.Object
+        android:id="@+id/secondDramImage"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/dram_open"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0" />
+
+    <com.example.far_faraway.Object
         android:id="@+id/secondDramBack"
         android:layout_width="50dp"
         android:layout_height="50dp"
@@ -18,110 +30,73 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <com.example.far_faraway.Object
-        android:id="@+id/secondDramImage"
-        android:layout_width="663dp"
-        android:layout_height="264dp"
-        android:background="@drawable/dram"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.578" />
-
-    <com.example.far_faraway.Object
         android:id="@+id/secondDramSign_1"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:background="@drawable/symbol_apple_1"
+        android:layout_width="140dp"
+        android:layout_height="140dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.132"
+        app:layout_constraintHorizontal_bias="0.197"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.389" />
+        app:layout_constraintVertical_bias="0.295" />
 
     <com.example.far_faraway.Object
         android:id="@+id/secondDramSign_2"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:background="@drawable/symbol_apple_1"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.093"
+        android:layout_width="140dp"
+        android:layout_height="140dp"
+        android:layout_marginStart="32dp"
         app:layout_constraintStart_toEndOf="@+id/secondDramSign_1"
-        app:layout_constraintTop_toTopOf="@+id/secondDramSign_1"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintTop_toTopOf="@+id/secondDramSign_1" />
 
     <com.example.far_faraway.Object
         android:id="@+id/secondDramSign_3"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:background="@drawable/symbol_apple_1"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.199"
+        android:layout_width="140dp"
+        android:layout_height="140dp"
+        android:layout_marginStart="32dp"
         app:layout_constraintStart_toEndOf="@+id/secondDramSign_2"
-        app:layout_constraintTop_toTopOf="@+id/secondDramSign_2"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintTop_toTopOf="@+id/secondDramSign_1" />
 
     <com.example.far_faraway.Object
         android:id="@+id/secondDramSign_4"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:background="@drawable/symbol_apple_1"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.275"
+        android:layout_width="140dp"
+        android:layout_height="140dp"
+        android:layout_marginStart="32dp"
         app:layout_constraintStart_toEndOf="@+id/secondDramSign_3"
-        app:layout_constraintTop_toTopOf="@+id/secondDramSign_3"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintTop_toTopOf="@+id/secondDramSign_1" />
 
     <com.example.far_faraway.Object
         android:id="@+id/secondDramSign_5"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:background="@drawable/symbol_apple_1"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        android:layout_width="140dp"
+        android:layout_height="140dp"
+        android:layout_marginTop="4dp"
         app:layout_constraintStart_toStartOf="@+id/secondDramSign_1"
-        app:layout_constraintTop_toBottomOf="@+id/secondDramSign_1"
-        app:layout_constraintVertical_bias="0.2" />
+        app:layout_constraintTop_toBottomOf="@+id/secondDramSign_1" />
 
     <com.example.far_faraway.Object
         android:id="@+id/secondDramSign_6"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:background="@drawable/symbol_apple_1"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.093"
+        android:layout_width="140dp"
+        android:layout_height="140dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="4dp"
         app:layout_constraintStart_toEndOf="@+id/secondDramSign_5"
-        app:layout_constraintTop_toBottomOf="@+id/secondDramSign_2"
-        app:layout_constraintVertical_bias="0.2" />
+        app:layout_constraintTop_toBottomOf="@+id/secondDramSign_2" />
 
     <com.example.far_faraway.Object
         android:id="@+id/secondDramSign_7"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:background="@drawable/symbol_apple_1"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.199"
+        android:layout_width="140dp"
+        android:layout_height="140dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="4dp"
         app:layout_constraintStart_toEndOf="@+id/secondDramSign_6"
-        app:layout_constraintTop_toBottomOf="@+id/secondDramSign_3"
-        app:layout_constraintVertical_bias="0.2" />
+        app:layout_constraintTop_toBottomOf="@+id/secondDramSign_3" />
 
     <com.example.far_faraway.Object
         android:id="@+id/secondDramSign_8"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:background="@drawable/symbol_apple_1"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.275"
+        android:layout_width="140dp"
+        android:layout_height="140dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="4dp"
         app:layout_constraintStart_toEndOf="@+id/secondDramSign_7"
-        app:layout_constraintTop_toBottomOf="@+id/secondDramSign_4"
-        app:layout_constraintVertical_bias="0.2" />
+        app:layout_constraintTop_toBottomOf="@+id/secondDramSign_4" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
