--- a/app/src/main/res/layout/fragment_second_sibas.xml
+++ b/app/src/main/res/layout/fragment_second_sibas.xml
@@ -6,6 +6,18 @@
     android:layout_height="match_parent"
     tools:context=".Puzzles.SecondSibas">
 
+    <ImageButton
+        android:id="@+id/secondSibasBG"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/bg_sibas"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0" />
+
     <com.example.far_faraway.Object
         android:id="@+id/secondSibasBack"
         android:layout_width="50dp"
@@ -19,54 +31,56 @@
 
     <com.example.far_faraway.Object
         android:id="@+id/secondSibasBtn_1"
-        android:layout_width="150dp"
-        android:layout_height="150dp"
+        android:layout_width="280px"
+        android:layout_height="330px"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="264dp"
-        android:layout_marginTop="16dp"
         android:background="@drawable/sibas_color_1"
         android:contentDescription="@string/app_name"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.227" />
 
     <com.example.far_faraway.Object
         android:id="@+id/secondSibasBtn_2"
-        android:layout_width="150dp"
-        android:layout_height="150dp"
+        android:layout_width="420px"
+        android:layout_height="215px"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="112dp"
-        android:layout_marginTop="144dp"
         android:background="@drawable/sibas_color_2"
         android:contentDescription="@string/app_name"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.373"
+        app:layout_constraintStart_toStartOf="@+id/secondSibasBG"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.504" />
 
     <com.example.far_faraway.Object
         android:id="@+id/secondSibasBtn_3"
-        android:layout_width="150dp"
-        android:layout_height="150dp"
+        android:layout_width="420px"
+        android:layout_height="215px"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="412dp"
-        android:layout_marginTop="144dp"
         android:background="@drawable/sibas_color_3"
         android:contentDescription="@string/app_name"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintBottom_toBottomOf="@+id/secondSibasBtn_2"
+        app:layout_constraintStart_toEndOf="@+id/secondSibasBtn_2"
+        app:layout_constraintTop_toTopOf="@+id/secondSibasBtn_2"
+        app:layout_constraintVertical_bias="0.0" />
 
     <com.example.far_faraway.Object
         android:id="@+id/secondSibasBtn_4"
-        android:layout_width="150dp"
-        android:layout_height="150dp"
+        android:layout_width="280px"
+        android:layout_height="330px"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="264dp"
-        android:layout_marginTop="244dp"
         android:background="@drawable/sibas_color_4"
         android:contentDescription="@string/app_name"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintEnd_toEndOf="@+id/secondSibasBtn_1"
+        app:layout_constraintStart_toStartOf="@+id/secondSibasBtn_1"
+        app:layout_constraintTop_toBottomOf="@+id/secondSibasBtn_1" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
